--- a/estudo-1/src/app/components/first-component/first-component.component.html
+++ b/estudo-1/src/app/components/first-component/first-component.component.html
@@ -1,1 +1,7 @@
 <h2>Meu primeiro componente feito!</h2>
+
+<p>Meu nome é {{ name }}</p>
+<p>E minha idade é {{ age }}</p>
+<p>Profissão é {{ job }}</p>
+<p>O meu hobbie favorito é {{ hobbies[1] }}</p>
+<p>O meu carro é um lindo {{ car.name }} - {{ car.year}}</p>
