Utilizando as rotas com link

--- a/estudo-1/src/app/app.component.html
+++ b/estudo-1/src/app/app.component.html
@@ -1,4 +1,10 @@
 <h1>Hello World!!</h1>
 <p>Primeiras conquistas</p>
+<nav>
+    <a routerLink="/">Home</a>
+    <a routerLink="/ParentData"> Segunda pagina</a>
+</nav>
+  <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+<app-first-component></app-first-component>
+<app-parent-data></app-parent-data>
