--- a/estudo-1/src/app/app.component.html
+++ b/estudo-1/src/app/app.component.html
@@ -7,4 +7,4 @@
   <router-outlet></router-outlet>
 
 <app-first-component></app-first-component>
-<app-parent-data></app-parent-data>
+<app-parent-data [name]="userName"></app-parent-data>
