--- a/estudo-1/src/app/componentes/parent-data/parent-data.component.html
+++ b/estudo-1/src/app/componentes/parent-data/parent-data.component.html
@@ -1,2 +1,4 @@
-<p>parent-data Aqui!</p>
-<p>BAh </p>
+<h3>Descrevendo Usuario:</h3>
+<p>Nome: {{name}} </p>
+<p>Email: {{userData.email}}</p>
+<p>Cargo: {{userData.role}}</p>
