--- a/estudo-1/src/app/componentes/parent-data/parent-data.component.html
+++ b/estudo-1/src/app/componentes/parent-data/parent-data.component.html
@@ -1,4 +1,6 @@
-<h3>Descrevendo Usuario:</h3>
+<div calss="class">
+  <h3>Descrevendo Usuario:</h3>
 <p>Nome: {{name}} </p>
 <p>Email: {{userData.email}}</p>
 <p>Cargo: {{userData.role}}</p>
+</div>
