--- a/estudo-1/src/app/componentes/if-render/if-render.component.html
+++ b/estudo-1/src/app/componentes/if-render/if-render.component.html
@@ -1,5 +1,5 @@
 <div class="class">
-  <div *ngIf="canShow">
-    To permitindo
-  </div>
+  <div *ngIf="canShow">To permitindo</div>
+  <h1 *ngIf="name==='Gabriel'">O Meu nome é Gabriel</h1>
+  <p>Ta complicado </p>
 </div>
