--- a/memoteca/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/memoteca/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,1 +1,7 @@
-<p>cabecalho works!</p>
+<header class="cabecalho ff-inter">
+  <div class="logo">
+    <img src="../../../assets/imagens/logo-memoteca.png" alt="Logo da aplicação da Memoteca">
+    <p>Guarde trechos de músicas, citações de livros, pensamentos e as suas melhores ideias</p>
+    <img class="imagem" src="../../../assets/imagens/computador-cabecalho.png" alt="Imagem de um computado">
+  </div>
+</header>
