assets incluido no json

--- a/memoteca/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/memoteca/src/app/componentes/cabecalho/cabecalho.component.html
@@ -1,7 +1,7 @@
 <header class="cabecalho ff-inter">
   <div class="logo">
-    <img src="../../../assets/imagens/logo-memoteca.png" alt="Logo da aplicação da Memoteca" >
+    <img src="assets/imagens/logo-memoteca.png" alt="Logo da aplicação da Memoteca" >
     <p>Guarde trechos de músicas, citações de livros, pensamentos e as suas melhores ideias</p>
   </div>
-  <img class="imagem" src="../../../assets/imagens/computador-cabecalho.png" alt="Imagem de um computado">
+  <img class="imagem" src="assets/imagens/computador-cabecalho.png" alt="Imagem de um computado">
 </header>
